# minimalist_concept_erasure

./: CLAUDE.md  Makefile  README.md  pyproject.toml  setup.cfg
baselines/: README.md
baselines/ca/: README.md  prompts.yaml  train.py  utils.py
baselines/eap/: flowmatch_sampler.py  gen_embedding.py  train.sh  train_flux_eap.py  utils.py
baselines/esd/: .gitignore  generate_dataset.py  train.py
baselines/flowedit/: flux_inference.py
baselines/ring_a_bell/: inv_prompt.py  unsafe-prompts4703.csv
baselines/ring_a_bell/data/InvPrompt/: Nudity_3_length_16.csv  Nudity_3_length_38.csv  Nudity_3_length_75.csv
baselines/sld/: flux_inference.py  sld.py
configs/: cele.yaml  copyright.yaml  flux.yaml  ip_characters.yaml  nudity_concepts.yaml  sdxl.yaml
models/flux/: attn.pt  ff.pt  norm.pt
scripts/: batch_run.sh  copyright_eval.py  dataset_vis.py  deconcept_prompt_generation.py  flux_add_noise.py  flux_inference.py  hyperparameter_tuning.py  image_quality_eval.py  latent_visualization.py  mask_merging.py  mask_selection_with_early_stopping.py  paper_image_plot.py  plot_ablation_results.py  plot_dataset.py  plot_imgs_side_by_side.py  run_detection_clip_fid.py  run_nudenet.py  train.py
src/diffsolver/: __init__.py  __main__.py
src/diffsolver/data/: __init__.py  adversarial_promptdatasets.py  data_prepare.py  eval_dataset.py  promptdataset.py  unlearn_template.py
src/diffsolver/evaluation/: __init__.py  size_runtime.py
src/diffsolver/hooks/: __init__.py  attention_processor.py  base.py  cross_attn_hooks.py  ff_hooks.py  init_hooker.py  linear_layer_hooks.py  linear_layer_weight_hook.py  norm_hook.py
src/diffsolver/models/: __init__.py  dit.py  flux.py  sd2.py  sd3.py  sdxl.py
src/diffsolver/scheduler/: __init__.py  dpm.py
src/diffsolver/utils/: __init__.py  clip.py  pipe.py  utils.py  utils_deconcept.py  utils_train.py
tests/: test_ds.py  test_hooks.py  test_linear_weight_mask.py  test_utils.py
